update brand name and colors

--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="128x128" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/favicon.png" sizes="128x128" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Phoenix</title>
-</head>
+    <meta name="twitter:title" content="Lyte Wallet" />
+    <meta name="twitter:description" content="Simple and secure digital wallet for everyone" />
+    <meta name="twitter:image" content="/logo_blue.png" />
+    <meta name="twitter:card" content="Simple and secure digital wallet for everyone" />
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
+    <!-- Open graph / facebook --->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://app.lytewallet.io" />
+    <meta property="og:title" content="Lyte Wallet" />
+    <meta property="og:description" content="Simple and secure digital wallet for everyone" />
+    <meta property="og:image" content="/logo_blue.png" />
+    <title>Lyte Wallet</title>
+  </head>
 
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
