update landing page

--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/favicon.png" sizes="128x128" />
+    <link rel="icon" type="image/png" href="/favicon-192x192.png" sizes="192x192" />
+
+    <link rel="apple-touch-icon" href="/favicon-192x192.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+    <!-- <link rel="manifest" href="/manifest.json" /> -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="twitter:title" content="Lyte Wallet" />
+    <meta name="twitter:title" content="Lyte - Your Personal Money Switch" />
     <meta name="twitter:description" content="Simple and secure digital wallet for everyone" />
     <meta name="twitter:image" content="/logo_blue.png" />
     <meta name="twitter:card" content="Simple and secure digital wallet for everyone" />
@@ -13,10 +23,13 @@
     <!-- Open graph / facebook --->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://app.lytewallet.io" />
-    <meta property="og:title" content="Lyte Wallet" />
+    <meta property="og:title" content="Lyte - Your Personal Money Switch" />
     <meta property="og:description" content="Simple and secure digital wallet for everyone" />
     <meta property="og:image" content="/logo_blue.png" />
-    <title>Lyte Wallet</title>
+
+    <meta name="theme-color" content="#ffffff" />
+
+    <title>Lyte - Your Personal Money Switch</title>
   </head>
 
   <body>
